fixed text spacing, splash screen, added new x-mark file

--- a/css/-common.css
+++ b/css/-common.css
@@ -171,9 +171,11 @@ input {
     display: block;
     height: 2.4rem;
     border: 1px solid #909090;
+    color: #909090;
     border-radius: 1.2rem;
     margin: 0.25rem auto;
-    padding: 0.7rem 0.85rem 1rem;
+    line-height: 2.4rem;
+    /*padding: 0.7rem 0.85rem 1rem; */
     text-align: center;
     width: 90%;
 }
